--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,37 @@
 h1 {
     font-size: 4em;
 }
+
+/*----------------- Card Flipping Animation -----------------*/
+
+.flip-card {
+  
+  width: 130px;
+  height: 130px;
+  perspective: 1000px; 
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+
+.flip-card-back {
+    transform: rotateY(180deg);
+   margin: auto;
+}
