--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,27 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 
 .flip-card-back {
     transform: rotateY(180deg);
     margin: auto;
+}
+
+.open {
+    transform: rotateY(0);
+    backface-visibility: visible !important;
+    -webkit-backface-visibility: visible !important;
+    
+}
+
+.disabled {
+    pointer-events: none;
+}
+
+.match {
+    backface-visibility: visible !important;
+    -webkit-backface-visibility: visible !important;
 }
