--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@
     margin: auto;
 }
 
-.open {
+.clicked {
     transform: rotateY(0);
     backface-visibility: visible !important;
     -webkit-backface-visibility: visible !important;
